<?xml version="1.0"?>
<package>
    <name>ads_catkin</name>
    <version>0.0.0</version>
    <description>Catkin wrapper for ADS Beckhoff</description>
    <maintainer email="jstiefel@ethz.ch">Julian Stiefel</maintainer>
    
    <license>see packages</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
</package>